--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.13.0"
   }
